fix: align padding of  content roadmap right (#7)

--- a/css/style.css
+++ b/css/style.css
@@ -641,7 +641,6 @@
   margin-top: 40px;
   width: 340px;
   height: 340px;
-  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
   object-fit: cover;
   flex-shrink: 0;
   aspect-ratio: 74/75;
@@ -650,7 +649,7 @@
 /* Bên phải */
 .timeline-right {
   width: 45%;
-  padding-left: 60px;
+  padding-left: 22px;
   text-align: left;
 }
 
